--- a/app/index.html
+++ b/app/index.html
@@ -38,5 +38,21 @@
 
 </head>
 <body>
+<div class="container mt-5 mb-5">
+    <h1>Application für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
+<form>
+    <div class="form-row">
+        <div class="form-group col-6">
+            <label for="vorname">Vorname</label>
+            <input type="text" class="form-control" id="vorname" placeholder="Vorname">
+        </div>
+        <div class="form-group col-6">
+            <label for="nachname">Nachname</label>
+            <input type="text" class="form-control" id="nachname" placeholder="Nachname">
+        </div>
+    </div>
+</form>
+</div>
+<script src="js/script.min.js" type="application/javascript"></script>
 </body>
 </html>
