--- a/app/index.html
+++ b/app/index.html
@@ -117,13 +117,18 @@
         </div>
     </div>
 </form>
-<div class="row">
-    <div class="col" id="ergebniss-kalorien">
+</div>
+<div class="lightbox" style="display: none;"></div>
+<div class="modal fade show">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button class="btn btn-danger hide-modal">Close</button>
+            </div>
+        </div>
     </div>
 </div>
-</div>
 <script src="js/script.min.js" type="application/javascript"></script>
-<div class="lightbox" style="display: none;"></div>
-<div class="modal" style="display: none;"></div>
 </body>
 </html>
