--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container mt-5 mb-5">
-    <h1 class="shadow p-3 rounded text-center">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
+    <h1 class="shadow p-3 mb-4 rounded text-center">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
 <form class="shadow p-3 mb-5 bg-white rounded" novalidate id="form">
     <div class="form-row">
         <div class="form-group col-6">
@@ -63,7 +63,7 @@
         </div>
         <div class="form-group col-6">
             <label for="geschlecht">Geschlecht</label> <select class="form-control" id="geschlecht" name="geschlecht">
-            <option value="weiblich">Weiblich</option>
+            <option value="weiblich" selected>Weiblich</option>
             <option value="maennlich">Männlich</option>
         </select>
         </div>
@@ -74,7 +74,7 @@
                 <label class="col-form-label col-sm-2 pt-0">Aktivität</label>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="aktivitaet" id="mangel" value="1"> <label class="form-check-label" for="mangel"> Bewegungsmangel </label>
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="mangel" value="1" checked="checked"> <label class="form-check-label" for="mangel"> Bewegungsmangel </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="aktivitaet" id="massige" value="2"> <label class="form-check-label" for="massige"> Mäßige Aktivität </label>
@@ -102,7 +102,7 @@
                         <input class="form-check-input" type="radio" name="ergebnis" id="abnehmen" value="2"> <label class="form-check-label" for="abnehmen"> abnehmen </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
+                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" checked="checked"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
                     </div>
                 </div>
             </div>
