--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container mt-5 mb-5">
-    <h1 class="shadow p-3 mb-4 rounded text-center">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
+    <h1 class="shadow p-3 mb-4 rounded text-center top-headline">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
 <form class="shadow p-3 mb-5 bg-white rounded" novalidate id="form">
     <div class="form-row">
         <div class="form-group col-6">
@@ -102,7 +102,7 @@
                         <input class="form-check-input" type="radio" name="ergebnis" id="abnehmen" value="2"> <label class="form-check-label" for="abnehmen"> abnehmen </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" checked="checked"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
+                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" > <label class="form-check-label" for="bleiben">Gewicht lassen</label>
                     </div>
                 </div>
             </div>
@@ -117,6 +117,21 @@
         </div>
     </div>
 </form>
+<div class="ergebnis-container shadow"  style="display: none;">
+    <div class="row">
+        <div class="col-12">
+            <div class="alert alert-primary m-0">
+                <h2>Ergebniss</h2>
+                <p class="result-text"></p>
+                <div class="row">
+                    <div class="col-12 text-right">
+                        <button class="btn btn-primary" id="menu-calculate">Berechnen das Speiseplan</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 <div class="lightbox" style="display: none;"></div>
 <div class="modal fade show">
