--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
     <div class="row">
         <div class="col-12">
             <div class="alert alert-primary m-0">
-                <h2>Ergebniss</h2>
+                <h2>Kalorien Ergebniss</h2>
                 <p class="result-text"></p>
                 <div class="row">
                     <div class="col-3">
@@ -146,6 +146,16 @@
                         <button class="btn btn-primary" id="menu-calculate">Berechnen das Speiseplan</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="menu-container shadow mt-5"  style="display: none;">
+    <div class="row">
+        <div class="col-12">
+            <div class="alert alert-primary m-0">
+                <h2>Ihre Speiseplan</h2>
+                <div class="result-text"></div>
             </div>
         </div>
     </div>
