--- a/app/index.html
+++ b/app/index.html
@@ -117,12 +117,21 @@
         </div>
     </div>
 </form>
-<div class="ergebnis-container shadow"  style="display: none;">
+<div class="ergebnis-container shadow" style="display: none;">
     <div class="row">
         <div class="col-12">
             <div class="alert alert-primary m-0">
                 <h2>Kalorien Ergebniss</h2>
                 <p class="result-text"></p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="speiseplan-anfrage shadow mt-5" style="display: none;">
+    <div class="row">
+        <div class="col-12">
+            <div class="alert alert-primary m-0">
+                <h2>Möchten Sie ein Speiseplan</h2>
                 <div class="row">
                     <div class="col-3">
                         <div class="form-check">
@@ -153,7 +162,7 @@
 <div class="menu-container shadow mt-5"  style="display: none;">
     <div class="row">
         <div class="col-12">
-            <div class="alert alert-primary m-0">
+            <div class="alert m-0">
                 <h2>Ihre Speiseplan</h2>
                 <div class="result-text"></div>
             </div>
