--- a/app/index.html
+++ b/app/index.html
@@ -181,6 +181,7 @@
         </div>
     </div>
 </div>
+<script src="js/jquery-3.4.1.min.js" type="application/javascript"></script>
 <script src="js/script.min.js" type="application/javascript"></script>
 </body>
 </html>
