--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,12 @@
             <div class="alert m-0">
                 <h2>Ihre Speiseplan</h2>
                 <div class="result-text"></div>
+                <div class="print-result row">
+                    <div class="col-12 text-right">
+                        <button class="btn btn-success" id="list-generation">Einkaufslist generieren</button>
+                        <button class="btn btn-primary" id="menu-print">Das Speiseplan ausdrucken</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
