--- a/app/index.html
+++ b/app/index.html
@@ -163,12 +163,28 @@
     <div class="row">
         <div class="col-12">
             <div class="alert m-0">
-                <h2>Ihre Speiseplan</h2>
+                <h2>Ihres Speiseplan</h2>
                 <div class="result-text"></div>
                 <div class="print-result row">
                     <div class="col-12 text-right">
-                        <button class="btn btn-success" id="list-generation">Einkaufslist generieren</button>
+                        <button class="btn btn-success" id="list-generation">Einkaufsliste generieren</button>
                         <button class="btn btn-primary" id="menu-print">Das Speiseplan ausdrucken</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="list-of-products shadow mt-5"  style="display: none;">
+    <div class="row">
+        <div class="col-12">
+            <div class="alert m-0">
+                <h2>Ihre Einkaufsliste</h2>
+                <button class="btn btn-primary" id="show-menu" style="display: none;">Das Speiseplan einzeigen</button>
+                <div class="result-text"></div>
+                <div class="print-result row">
+                    <div class="col-12 text-right">
+                        <button class="btn btn-primary" id="liste-print">Die Einkaufsliste ausdrucken</button>
                     </div>
                 </div>
             </div>
